поправил футер в письмах еще поубирал sku

--- a/app/design/adminhtml/default/default/template/sales/order/create/items/grid.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/create/items/grid.phtml
@@ -106,7 +106,7 @@
                         <td class="first">
                             <h5 class="title"><span id="order_item_<?php echo $_item->getId() ?>_title"><?php echo $this->escapeHtml($_item->getName()) ?></span></h5>
                             <div>
-                                <strong><?php echo $this->helper('sales')->__('SKU') ?>:</strong>
+<!--                                <strong>--><?php //echo $this->helper('sales')->__('SKU') ?><!--:</strong>-->
                                 <?php echo implode('<br />', Mage::helper('catalog')->splitSku($this->escapeHtml($_item->getSku()))); ?>
                             </div>
                             <?php if($_item->getMessage(false)): ?>
