--- a/app/design/frontend/rwd/default/template/sales/order/creditmemo/items.phtml
+++ b/app/design/frontend/rwd/default/template/sales/order/creditmemo/items.phtml
@@ -40,7 +40,7 @@
     <thead>
         <tr>
             <th><?php echo $this->__('Product Name') ?></th>
-            <th><?php echo $this->__('SKU') ?></th>
+<!--            <th>--><?php //echo $this->__('SKU') ?><!--</th>-->
             <th class="a-right" data-rwd-label="<?php echo $this->__('Price') ?>"><?php echo $this->__('Price') ?></th>
             <th class="a-center" data-rwd-label="<?php echo $this->__('Qty') ?>"><?php echo $this->__('Qty') ?></th>
             <th class="a-right" data-rwd-label="<?php echo $this->__('Subtotal') ?>"><?php echo $this->__('Subtotal') ?></th>
