--- a/app/design/frontend/rwd/default/template/sales/order/shipment/items.phtml
+++ b/app/design/frontend/rwd/default/template/sales/order/shipment/items.phtml
@@ -71,7 +71,7 @@
     <thead>
         <tr>
             <th><?php echo $this->__('Product Name') ?></th>
-            <th><?php echo $this->__('SKU') ?></th>
+<!--            <th>--><?php //echo $this->__('SKU') ?><!--</th>-->
             <th class="a-center"><span class="nobr"><?php echo $this->__('Qty Shipped') ?></span></th>
         </tr>
     </thead>
