--- a/app/locale/en_US/template/email/html/footer.html
+++ b/app/locale/en_US/template/email/html/footer.html
@@ -7,7 +7,7 @@
 				<img src="http://www.rent-a-bag.club/skin/frontend/base/default/images/logo.jpg" style="display: inline-block; position: relative; margin-top: -22px; padding: 0 5px ;width: 240px; height: 41px; background: #fff;" />
 			</a>
 		</div>
-		<div class="text" style="padding-left: 49px; color: #777; font-family: Verdana, Tahoma, Arial; font-size: 12px;">Sincerely, <br /> Trendystash team
+		<div class="text" style="padding-left: 49px; color: #777; font-family: Verdana, Tahoma, Arial; font-size: 12px;">Sincerely, <br /> Trendy Stash team
 		</div>
 	</div>
 </div>
