--- a/app/design/frontend/rentabag/default/template/email/order/items.phtml
+++ b/app/design/frontend/rentabag/default/template/email/order/items.phtml
@@ -43,7 +43,7 @@
                             <?php endif; ?>
                         </th>
                         <th class="cell-name align-center" style="padding: 15px 10px; border-left: 1px solid #dcdcdc; border-bottom: 1px solid #dcdcdc; background-color: #cccccc;">
-                            <?php echo $this->__('Qty'); ?>
+                            <?php echo $this->__('Days'); ?>
                         </th>
                         <th class="cell-name align-right" style="padding: 15px 10px; text-align: left; border-left: 1px solid #dcdcdc; border-bottom: 1px solid #dcdcdc; background-color: #cccccc;">
                             <?php echo $this->__('Price'); ?>
