--- a/app/design/frontend/rentabag/default/template/email/order/items/order/default.phtml
+++ b/app/design/frontend/rentabag/default/template/email/order/items/order/default.phtml
@@ -1,27 +1,6 @@
 <?php
 /**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magento.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magento.com for more information.
- *
- * @category    design
- * @package     rwd_default
- * @copyright   Copyright (c) 2006-2016 X.commerce, Inc. and affiliates (http://www.magento.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @author Vlasakh
  */
 ?>
 <?php $_item = $this->getItem() ?>
@@ -33,13 +12,14 @@
 <!--        <p class="sku">--><?php //echo $this->__('SKU'); ?><!--: --><?php //echo $this->escapeHtml($this->getSku($_item)) ?><!--</p>-->
             <?php if ($this->getItemOptions()): ?>
                 <dl style="margin:0; padding:0;">
-            <?php foreach ($this->getItemOptions() as $option): ?>
+            <?php foreach ($_options = $this->getItemOptions() as $option): ?>
                             <dt><strong><em><?php echo $option['label'] ?></em></strong></dt>
                             <dd style="margin:0; padding:0 0 0 9px;">
                                 <?php echo nl2br($option['value']) ?>
                             </dd>
                         <?php endforeach; ?>
                     </dl>
+                    <?= 'CLASS ' . get_class($this) ?>
                 <?php endif; ?>
                 <?php $addInfoBlock = $this->getProductAdditionalInformationBlock(); ?>
                 <?php if ($addInfoBlock) :?>
@@ -47,7 +27,16 @@
                 <?php endif; ?>
                 <?php echo $this->escapeHtml($_item->getDescription()) ?>
             </td>
-            <td class="cell-content align-center" style="padding: 10px; border: 1px solid #dcdcdc;"><?php echo $_item->getQtyOrdered()*1 ?></td>
+            <td class="cell-content align-center" style="padding: 10px; border: 1px solid #dcdcdc; text-align: center">
+                <?php /*echo $_item->getQtyOrdered()*1*/ ?>
+                <?php /* change qty to rent days count */ ?>
+                    <?php if( $days = $this->getProductOption($_options, 'days') ): ?>
+                        <?= $days['value'] ?>
+                    <?php else: ?>
+                        &dash;
+                    <?php endif; ?>
+                <?php /* ----------------------------- */ ?>
+            </td>
             <td class="cell-content align-right" style="padding: 10px; border: 1px solid #dcdcdc;">
                 <?php if ($this->helper('tax')->displaySalesPriceExclTax($_order->getStore()) || $this->helper('tax')->displaySalesBothPrices($_order->getStore())): ?>
                     <?php if ($this->helper('tax')->displaySalesBothPrices($_order->getStore())): ?>
