--- a/app/design/frontend/rentabag/default/template/email/order/items/invoice/default.phtml
+++ b/app/design/frontend/rentabag/default/template/email/order/items/invoice/default.phtml
@@ -60,27 +60,31 @@
 
                 <?php if (Mage::helper('weee')->getApplied($_item)): ?>
                     <br />
-                    <?php if (Mage::helper('weee')->typeOfDisplay($_item, 1, 'email', $_order->getStore())): ?>
+
+                <?php //============================ Alex 10.08.2017 ?>
+
+                <?php /*if (Mage::helper('weee')->typeOfDisplay($_item, 1, 'email', $_order->getStore())): */?><!--
                         <small>
-                            <?php foreach (Mage::helper('weee')->getApplied($_item) as $tax): ?>
-                                <span class="nobr"><?php echo $tax['title']; ?>: <?php echo $_order->formatPrice($tax['row_amount'],true,true); ?></span><br />
-                            <?php endforeach; ?>
+                            <?php /*foreach (Mage::helper('weee')->getApplied($_item) as $tax): */?>
+                                <span class="nobr"><?php /*echo $tax['title']; */?>: <?php /*echo $_order->formatPrice($tax['row_amount'],true,true); */?></span><br />
+                            <?php /*endforeach; */?>
                         </small>
-                    <?php elseif (Mage::helper('weee')->typeOfDisplay($_item, 2, 'email', $_order->getStore())): ?>
-                        <?php foreach (Mage::helper('weee')->getApplied($_item) as $tax): ?>
-                            <span class="nobr"><small><?php echo $tax['title']; ?>: <?php echo $_order->formatPrice($tax['row_amount'],true,true); ?></small></span><br />
-                        <?php endforeach; ?>
-                    <?php elseif (Mage::helper('weee')->typeOfDisplay($_item, 4, 'email', $_order->getStore())): ?>
+                    <?php /*elseif (Mage::helper('weee')->typeOfDisplay($_item, 2, 'email', $_order->getStore())): */?>
+                        <?php /*foreach (Mage::helper('weee')->getApplied($_item) as $tax): */?>
+                            <span class="nobr"><small><?php /*echo $tax['title']; */?>: <?php /*echo $_order->formatPrice($tax['row_amount'],true,true); */?></small></span><br />
+                        <?php /*endforeach; */?>
+                    <?php /*elseif (Mage::helper('weee')->typeOfDisplay($_item, 4, 'email', $_order->getStore())): */?>
                         <small>
-                            <?php foreach (Mage::helper('weee')->getApplied($_item) as $tax): ?>
-                                <span class="nobr"><?php echo $tax['title']; ?>: <?php echo $_order->formatPrice($tax['row_amount'],true,true); ?></span><br />
-                            <?php endforeach; ?>
+                            <?php /*foreach (Mage::helper('weee')->getApplied($_item) as $tax): */?>
+                                <span class="nobr"><?php /*echo $tax['title']; */?>: <?php /*echo $_order->formatPrice($tax['row_amount'],true,true); */?></span><br />
+                            <?php /*endforeach; */?>
                         </small>
-                    <?php endif; ?>
+                    --><?php /*endif; */?>
+                <?php //============================ Alex 10.08.2017 ?>
 
                     <?php if (Mage::helper('weee')->typeOfDisplay($_item, 2, 'email', $_order->getStore())): ?>
                         <br />
-                        <span class="nobr"><?php echo Mage::helper('weee')->__('Total'); ?>:<br /> <?php echo $_order->formatPrice($_item->getCalculationPrice()+$_item->getWeeeTaxAppliedRowAmount()+$_item->getWeeeTaxRowDisposition()); ?></span>
+                        <span class="nobr"><?php echo Mage::helper('weee')->__('Insurance'); ?>:<br /> <?php echo $_order->formatPrice($_item->getCalculationPrice()+$_item->getWeeeTaxAppliedRowAmount()+$_item->getWeeeTaxRowDisposition()); ?></span>
                     <?php endif; ?>
                 <?php endif; ?>
             <?php endif; ?>
