--- a/app/locale/en_US/template/email/sales/order_new_guest.html
+++ b/app/locale/en_US/template/email/sales/order_new_guest.html
@@ -28,7 +28,8 @@
                 <tr>
                     <td class="email-heading">
                         <h1>Thank you for your order from {{var store.getFrontendName()}}.</h1>
-                        <p style="padding-right: 5px;">We will be in touch with you 7 days before shipping your order to prompt you to make a deposit. We never keep the deposit, this always is being held by our trusted third party merchant bank. Meanwhile, please find your order summary below. Thank you again for your business. </p>
+                        <p style="padding-right: 5px;">Please find order summary below. We will be in touch with you 7 days prior shipping your orders to you. This is when we will say send you an email prompting you to make a deposit.</p>
+                        <p style="padding-right: 5px;">(Please note that we never keep the deposit, this always is being held by our trusted third party merchant bank <a href="/trendystash_terms_and_conditions/">T&C</a>)</p>
                     </td>
                     <td class="store-info">
                         <h4>Order Questions?</h4>
