--- a/app/design/frontend/rentabag/default/template/checkout/cart.phtml
+++ b/app/design/frontend/rentabag/default/template/checkout/cart.phtml
@@ -44,7 +44,7 @@
 
                     <th class="a-center cart-price-head" colspan="<?php echo $mergedCells; ?>">
 <!--                            <div class="cart-price-placeholder">-->
-                            <span class="nobr"><?php echo $this->__('Price') ?></span>
+                            <span class="nobr"><?php echo $this->__('Price per day') ?></span>
 <!--                            </div>-->
                     </th>
 
