--- a/app/design/frontend/rentabag/default/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/rentabag/default/template/checkout/cart/item/default.phtml
@@ -126,11 +126,11 @@ $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage
                 <span class="cart-price">
             <?php endif; ?>
                 <?php if (Mage::helper('weee')->typeOfDisplay($_item, array(0, 1, 4), 'sales') && $_item->getWeeeTaxAppliedAmount()): ?>
-                    <?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()+$_item->getWeeeTaxAppliedAmount()+$_item->getWeeeTaxDisposition()); ?>
+                    <?php echo $this->helper('checkout')->formatPrice($_item->getData('original_price')+$_item->getWeeeTaxAppliedAmount()+$_item->getWeeeTaxDisposition()); ?>
+                    <?php /*echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()+$_item->getWeeeTaxAppliedAmount()+$_item->getWeeeTaxDisposition()); */?>
                 <?php else: ?>
-                    <?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()) ?>
+                    <?php echo $this->helper('checkout')->formatPrice($_item->getData('original_price')) ?>
                 <?php endif; ?>
-
             </span>
 
             <?php if (Mage::helper('weee')->getApplied($_item)): ?>
@@ -167,7 +167,6 @@ $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage
             <?php else: ?>
                 <span class="cart-price">
             <?php endif; ?>
-
                 <?php if (Mage::helper('weee')->typeOfDisplay($_item, array(0, 1, 4), 'sales') && $_item->getWeeeTaxAppliedAmount()): ?>
                     <?php echo $this->helper('checkout')->formatPrice($_incl + Mage::helper('weee')->getWeeeTaxInclTax($_item)); ?>
                 <?php else: ?>
