--- a/app/design/frontend/rentabag/default/template/checkout/onepage/review/item.phtml
+++ b/app/design/frontend/rentabag/default/template/checkout/onepage/review/item.phtml
@@ -1,38 +1,32 @@
 <?php
 /**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magento.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magento.com for more information.
- *
- * @category    design
- * @package     rwd_default
- * @copyright   Copyright (c) 2006-2016 X.commerce, Inc. and affiliates (http://www.magento.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @author Vlasakh
  */
 ?>
 <?php $_item = $this->getItem()?>
+<?php $_days = '-' ?>
 <tr>
     <td><h3 class="product-name"><?php echo $this->escapeHtml($this->getProductName()) ?></h3>
         <?php if ($_options = $this->getOptionList()):?>
         <dl class="item-options">
             <?php foreach ($_options as $_option) : ?>
+                <?php
+                    // -- sakharov 2016-03-04 -------------
+                    $flag = 0;
+                    if ($_option['option_type'] == 'days') {
+                        $_days = $_option['value'];
+                        continue;
+                    }
+                    if($_option['option_type'] == 'to_date' || $_option['option_type'] == 'from_date')
+                    {
+                        $value = explode(' ', $_option['print_value']);
+                        $flag = 1;
+                    }
+                    // -- ---------------------------------
+                ?>
             <?php $_formatedOptionValue = $this->getFormatedOptionValue($_option) ?>
             <dt><?php echo $this->escapeHtml($_option['label']) ?></dt>
-            <dd<?php if (isset($_formatedOptionValue['full_view'])): ?> class="truncated"<?php endif; ?>><?php echo $_formatedOptionValue['value'] ?>
+            <dd<?php if (isset($_formatedOptionValue['full_view'])): ?> class="truncated"<?php endif; ?>><?php echo $flag ? $value[0] : $_formatedOptionValue['value'] ?>
                 <?php if (isset($_formatedOptionValue['full_view'])): ?>
                 <div class="truncated_full_value">
                     <dl class="item-options">
@@ -59,9 +53,10 @@
         <?php endif; ?>
 
             <?php if (Mage::helper('weee')->typeOfDisplay($_item, array(0, 1, 4), 'sales') && $_item->getWeeeTaxAppliedAmount()): ?>
-                <?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()+$_item->getWeeeTaxAppliedAmount()+$_item->getWeeeTaxDisposition()); ?>
+                <?php echo $this->helper('checkout')->formatPrice($_item->getData('original_price')+$_item->getWeeeTaxAppliedAmount()+$_item->getWeeeTaxDisposition()); ?>
+                <?php /*echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()+$_item->getWeeeTaxAppliedAmount()+$_item->getWeeeTaxDisposition()); */?>
             <?php else: ?>
-                <?php echo $this->helper('checkout')->formatPrice($_item->getCalculationPrice()) ?>
+                <?php echo $this->helper('checkout')->formatPrice($_item->getData('original_price')) ?>
             <?php endif; ?>
 
         </span>
@@ -144,7 +139,10 @@
         <?php endif; ?>
     </td>
     <?php endif; ?>
-    <td class="a-center" data-rwd-label="<?php echo $this->__('Qty') ?>"><?php echo $_item->getQty() ?></td>
+    <td class="a-center" data-rwd-label="<?php echo $this->__('Days') ?>">
+        <?php echo $_days ?>
+        <?php /*echo $_item->getQty() */?>
+    </td>
     <!-- sub total starts here -->
     <?php if ($this->helper('tax')->displayCartPriceExclTax() || $this->helper('tax')->displayCartBothPrices()): ?>
     <?php $_labelAppend = $this->helper('tax')->displayCartBothPrices() ? ' ' . $this->__('(Excl. Tax)') : ''; ?>
