округлил кнопку в checkout поднял поиск на главной добавил полоску над слайдером на главной

--- a/src/scss/rentabag-style.scss
+++ b/src/scss/rentabag-style.scss
@@ -1,10 +1,11 @@
-@import "rentabag/_fonts";
-@import "rentabag/_media";
-@import "rentabag/_header";
-@import "rentabag/_sidebar";
-@import "rentabag/_pages";
-@import "rentabag/_catalog";
-@import "rentabag/_single-product";
-@import "rentabag/_cart";
-@import "rentabag/_checkout";
-@import "rentabag/_footer";
+@import "rentabag/fonts";
+@import "rentabag/media";
+@import "rentabag/header";
+@import "rentabag/sidebar";
+@import "rentabag/pages";
+@import "rentabag/main";
+@import "rentabag/catalog";
+@import "rentabag/single-product";
+@import "rentabag/cart";
+@import "rentabag/checkout";
+@import "rentabag/footer";
