--- a/skin/frontend/rwd/default/scss/_var.scss
+++ b/skin/frontend/rwd/default/scss/_var.scss
@@ -222,7 +222,7 @@ $f-stack-sans: 'Helvetica Neue', Verdana, Arial, sans-serif;
 $f-stack-serif: Georgia, Times, 'Times New Roman', serif;
 $f-stack-special: 'Raleway', 'Helvetica Neue', Verdana, Arial, sans-serif;
 
-$f-stack-default: $f-stack-sans;
+$f-stack-default: $f-stack-special;
 
 // Font Sizes
 
