--- a/src/scss/rentabag/_checkout.scss
+++ b/src/scss/rentabag/_checkout.scss
@@ -39,6 +39,7 @@ body.checkout-onepage-index{
 			height: 40px;
 			float: none;
 			background: #fb1c5b !important;
+			border-radius: 5px;
 			@media (max-width: 700px){  float: right;  margin-right: 10px;  }
 		}
 	}
