подправил contact us в письмах

--- a/app/locale/en_US/template/email/sales/invoice_new.html
+++ b/app/locale/en_US/template/email/sales/invoice_new.html
@@ -31,7 +31,7 @@
                         <p style="padding-right: 5px;">Please find order summary below. We will be in touch with you 7 days prior shipping your orders to you. This is when we will say send you an email prompting you to make a deposit.</p>
                         <p style="padding-right: 5px;">(Please note that we never keep the deposit, this always is being held by our trusted third party merchant bank <a href="/trendystash_terms_and_conditions/">T&C</a>)</p>
                     </td>
-                    <td class="store-info" style="padding-left: 15px;">
+                    <td class="store-info" style="padding-left: 15px; width: 250px">
                         <h4 style="margin-top: 30px;">Order Questions?</h4>
                         <p>
                             {{depend store_phone}}
