--- a/src/scss/rentabag/_catalog.scss
+++ b/src/scss/rentabag/_catalog.scss
@@ -95,6 +95,7 @@ select{
   .products-list .action .button, .products-grid .actions .button{
     width: 85%;
     height: 38px;
+    line-height: 25px;
   }
   .count-container .amount--no-pages{  display: none;  }
 }
