--- a/src/scss/rentabag/_pages.scss
+++ b/src/scss/rentabag/_pages.scss
@@ -399,9 +399,11 @@ body {
 	&.rent-search-index{
 		.renta-search{
 			padding: 15px 0;
+			text-align: center;
 			input[name="daterange"]{
 				display: inline-block !important;
 				vertical-align: top;
+				padding: 5px;
 				@include mdmax($mdmax){
 					width: 200px !important;
 					font-size: 13px;
