--- a/app/locale/en_US/template/email/sales/shipment_new_guest.html
+++ b/app/locale/en_US/template/email/sales/shipment_new_guest.html
@@ -29,7 +29,7 @@
                     <td class="email-heading">
                         <h1>Thank you for your order from {{var store.getFrontendName()}}.</h1>
                         <p style="padding-right: 5px;">Please find order summary below. We will be in touch with you 7 days prior shipping your orders to you. This is when we will say send you an email prompting you to make a deposit.</p>
-                        <p style="padding-right: 5px;">(Please note that we never keep the deposit, this always is being held by our trusted third party merchant bank <a href="/trendystash_terms_and_conditions/">T&C</a>)</p>
+                        <p style="padding-right: 5px;">(Please note that we never keep the deposit, this always is being held by our trusted third party merchant bank <a href="{{config path="web/secure/base_url"}}trendystash_terms_and_conditions/">T&C</a>)</p>
                     </td>
                     <td class="store-info" style="width: 250px;">
                         <h4>Order Questions?</h4>
@@ -95,7 +95,7 @@
             {{block type='core/template' area='frontend' template='email/order/shipment/track.phtml' shipment=$shipment order=$order}}
         </td>
     </tr>
-    <tr><td style="text-align: right;"><a href="{{store url=""}}trendystash_terms_and_conditions/" target="_blank">TERMS &amp; CONDITIONS</a></td></tr>
+    <tr><td style="text-align: right;"><a href="{{config path="web/secure/base_url"}}trendystash_terms_and_conditions/" target="_blank">TERMS &amp; CONDITIONS</a></td></tr>
 </table>
 
 {{template config_path="design/email/footer"}}
