--- a/src/scss/rentabag/_footer.scss
+++ b/src/scss/rentabag/_footer.scss
@@ -7,9 +7,6 @@
 	@include mdmax($mdmax) {
 		text-align: center;
 	}
-	@include mdmin($mdmin){
-		.links{  width: 19%;  }
-	}
 	@include xsmax($xsmax) {
 		text-align: left;
 	}
@@ -20,6 +17,9 @@
 		}
 	}
 	.links {
+		@include mdmin($mdmin){
+			width: 18%;
+		}
 		//position: relative;
 		//@include mdmin($mdmin){
 		//  width: 20%;
@@ -41,7 +41,24 @@
 		//	}
 		//  }
 		//}
-		.sharing-links{ display: flex; justify-content: space-around;
+		.title{  display: block;  padding-bottom: 12px;  }
+		.payments{   display: flex; justify-content: flex-start; flex-wrap: wrap;
+			li{
+				width: 57px;
+				height: 35px;
+				margin: 0 5px 8px 0;
+				padding: 0;
+				@include payment_sprite;
+				background-size: 400%;
+			}
+			.visa{  background-position: -3px -4px;  }
+			.visa_electron{  background-position: -119px -4px;  }
+			.master_card{  background-position: -3px -50px;  }
+			.maestro{  background-position: -60px -50px;  }
+			.american_express{  background-position: -118px -50px;  }
+		}
+		.sharing-links{ display: flex; justify-content: flex-start;
+			li{  margin-right: 15px;  padding: 0;  }
 			a{ display: flex; align-items: center; justify-content: center; width: 30px; height: 30px; border-radius: 50%; border: 1px solid #000;
 				&:hover{ border-color: #FB1C5B; }
 				&:after{ display: none; }
