подправил отображение статичекских страниц

--- a/src/scss/rentabag/_catalog.scss
+++ b/src/scss/rentabag/_catalog.scss
@@ -24,7 +24,7 @@ select{
   border: none;
   background-color: transparent;
 }
-.main-container h1{  margin-left: 10px;  }
+.catalog-category-view .main-container h1{  margin-left: 10px;  }
 .category-products{
   .products-grid{
     display: flex;
