--- a/src/scss/rentabag/_pages.scss
+++ b/src/scss/rentabag/_pages.scss
@@ -54,7 +54,7 @@ body {
 		.vc_col-sm-12{
 			max-width: 1260px;
 			margin: 0 auto;
-			padding-left: 30px;
+			//padding-left: 30px;
 		}
 	}
 	&.cms-how-it-works-buy-to-rent, &.cms-how-it-works-rent-a-bag {
