Сделал кастомную страницу для инфо о подписке

--- a/app/design/frontend/base/default/template/addweb/newsSubscribeSuccess.phtml
+++ b/app/design/frontend/base/default/template/addweb/newsSubscribeSuccess.phtml
@@ -1,1 +1,1 @@
-<?php    /**     * @var Addweb_AdvReservation_Block_Newssubscribe $this     */?><p>Success Success Success Success Success Success Success Success Success Success Success Success Success Success Success Success Success Success Success </p>
+<?php    /**     * @var Addweb_AdvReservation_Block_Newssubscribe $this     */?><p>Now you will receive our latest news</p>
