Поменял даты из на длинные и добавил days в описание заказа

--- a/app/design/frontend/rentabag/default/template/sales/order/items.phtml
+++ b/app/design/frontend/rentabag/default/template/sales/order/items.phtml
@@ -17,8 +17,8 @@
         <tr>
             <th><?php echo $this->__('Product') ?></th>
 <!--            <th>--><?php //echo $this->__('SKU') ?><!--</th>-->
-            <th class="a-right"><?php echo $this->__('Price') ?></th>
-            <th class="a-center"><?php echo $this->__('Qty') ?></th>
+            <th class="a-right"><?php echo $this->__('Price per day') ?></th>
+            <th class="a-center"><?php echo $this->__('Days') ?></th>
             <th class="a-right"><?php echo $this->__('Subtotal') ?></th>
         </tr>
     </thead>
