--- a/src/scss/index-custom.scss
+++ b/src/scss/index-custom.scss
@@ -14,3 +14,4 @@ $allowMedia: true;
 @import "inc/layout";
 @import "inc/page-pledge";
 @import "inc/sales-order";
+@import "inc/page-subsribe-success";
