сделал иконки платежек серыми добавил иконку ssl в футер

--- a/src/scss/rentabag/_footer.scss
+++ b/src/scss/rentabag/_footer.scss
@@ -64,6 +64,7 @@
 				&:after{ display: none; }
 			}
 		}
+		.ssl_certificate{  width: 75px;  margin-top: 15px;  }
 		@include mdmax($mdmax) {
 			display: inline-block;
 			float: none;
