--- a/src/scss/inc/_vars.scss
+++ b/src/scss/inc/_vars.scss
@@ -1,4 +1,4 @@
-$theme-path: '../../';
+$theme-path: '../..';
 $theme-path-pic: #{$theme-path}/Images;
 $pathImage: #{$theme-path}/Images;
 //$theme-path-fonts: #{$theme-path}/fonts;
