--- a/skin/frontend/base/default/css/FME/fme_layered_nav.css
+++ b/skin/frontend/base/default/css/FME/fme_layered_nav.css
@@ -21,7 +21,7 @@ div.fme-filter input.fme_layered_disabled {background-color:gray; border:1px sol
 div.fme-filter a.fme_layered_clear {float: right; cursor:pointer;} 
 
 div.price_slider { position:relative; z-index:9; height:28px;/* background:url(../../images/FME/orange_bar.jpg) repeat-x 50% 50%;*/ width: 80%; cursor:pointer; }
-div.price_slider:after{    content: '';  display: block;  height: 10px;  width: 100%;  background: linear-gradient(to top, #FB1C5B, #9E163C);  position: absolute; top: 33%;}
+div.price_slider:after{    content: '';  display: block;  height: 10px;  width: 100%;  background: linear-gradient(to top, #816A47, #423726);  position: absolute; top: 33%;}
 div.price_slider div.handle { top:3px; width:14px; height:23px; background: transparent url(../../images/FME/slider_button.png) no-repeat; cursor:move; position: absolute;  z-index: 6;}
 
 #adj-nav-container, div.adj-nav {position:relative}
@@ -140,10 +140,10 @@ div.fme-filter dd li{overflow:hidden;}
 
 .color a {  font-size:12px; color:#333; text-decoration:none; }
 
-.color a:hover { color:#FB1C5B; text-decoration:none; }
+.color a:hover { color:#816A47; text-decoration:none; }
 
 .color span {  text-align: left; font-size:12px; color:#999; margin-top: -3px;  vertical-align: top; }
-div.fme-filter dd a:hover { color:#FB1C5B; text-decoration:none; }
+div.fme-filter dd a:hover { color:#816A47; text-decoration:none; }
 div.fme-filter dd a { font-size:12px; color:#333; text-decoration:none; }
 
 
