--- a/skin/frontend/base/default/css/addweb/daterangepicker.css
+++ b/skin/frontend/base/default/css/addweb/daterangepicker.css
@@ -99,7 +99,7 @@
     border-color: transparent;
     color: #999; }
 .daterangepicker td.in-range {
-    background-color: #FDE0E8;
+    background-color: rgba(129, 106, 71, 0.32);
     border-color: transparent;
     color: #000;
     border-radius: 0; }
@@ -110,7 +110,7 @@
 .daterangepicker td.start-date.end-date {
     border-radius: 4px; }
 .daterangepicker td.active, .daterangepicker td.active:hover {
-    background-color: #FB1C5B;
+    background-color: #816A47;
     border-color: transparent;
     color: #fff; }
 .daterangepicker th.month {
@@ -145,7 +145,7 @@
     padding: 0 6px 0 28px;
     width: 100%; }
 .daterangepicker .input-mini.active {
-    border: 1px solid #FB1C5B;
+    border: 1px solid #816A47;
     border-radius: 4px; }
 .daterangepicker .daterangepicker_input {
     position: relative; }
@@ -178,17 +178,17 @@
     background: #f5f5f5;
     border: 1px solid #f5f5f5;
     border-radius: 4px;
-    color: #FB1C5B;
+    color: #816A47;
     padding: 3px 12px;
     margin-bottom: 8px;
     cursor: pointer; }
 .ranges li:hover {
-    background: #FB1C5B;
-    border: 1px solid #FB1C5B;
+    background: #816A47;
+    border: 1px solid #816A47;
     color: #fff; }
 .ranges li.active {
-    background: #FB1C5B;
-    border: 1px solid #FB1C5B;
+    background: #816A47;
+    border: 1px solid #816A47;
     color: #fff; }
 
 /*  Larger Screen Styling */
