--- a/skin/frontend/rentabag/default/css/styles.css
+++ b/skin/frontend/rentabag/default/css/styles.css
@@ -496,12 +496,12 @@ textarea {
 }
 
 a {
-  color: #FB1C5B;
+  color: #816A47;
   text-decoration: none;
 }
 
 a:hover {
-  color: #C11747;
+  color: #715d40;//#C11747;
   text-decoration: underline;
 }
 
@@ -523,7 +523,7 @@ ul {
 h1, .h1 {
   margin: 0;
   margin-bottom: 0.7em;
-  color: #FB1C5B;
+  color: #816A47;
   font-family: 'Raleway', 'Helvetica Neue', Verdana, Arial, sans-serif;
   font-size: 28px;
   font-weight: 400;
@@ -677,7 +677,7 @@ h6, .h6 {
   line-height: 1.4;
   text-rendering: optimizeSpeed;
   text-transform: uppercase;
-  color: #FB1C5B;
+  color: #816A47;
   margin-bottom: 0;
   text-transform: uppercase;
   font-weight: 600;
@@ -783,7 +783,7 @@ body:not(.customer-account) .block:first-child .block-title {
     display: block;
     border-top: 4px solid transparent;
     border-bottom: 4px solid transparent;
-    border-left: 4px solid #FB1C5B;
+    border-left: 4px solid #816A47;
     border-right: none;
     left: 10px;
     top: 50%;
@@ -825,7 +825,7 @@ body:not(.customer-account) .block:first-child .block-title {
     display: block;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
-    border-top: 4px solid #FB1C5B;
+    border-top: 4px solid #816A47;
     border-bottom: none;
     left: 10px;
     top: 50%;
@@ -862,7 +862,7 @@ body:not(.customer-account) .block:first-child .block-title {
 .block-account li strong,
 .block-cms-menu li strong {
   font-weight: 400;
-  color: #FB1C5B;
+  color: #816A47;
 }
 .block-account li a,
 .block-cms-menu li a {
@@ -870,7 +870,7 @@ body:not(.customer-account) .block:first-child .block-title {
 }
 .block-account li a:hover,
 .block-cms-menu li a:hover {
-  color: #FB1C5B;
+  color: #816A47;
 }
 
 /* ============================================ *
@@ -881,7 +881,7 @@ body:not(.customer-account) .block:first-child .block-title {
 .cart-table .button,
 .sidebar .actions .button,
 .button.button-secondary {
-  background: #FB1C5B;
+  background: #816A47;
   color: #636363;
   padding: 7px 15px;
 }
@@ -889,14 +889,14 @@ body:not(.customer-account) .block:first-child .block-title {
 .cart-table .button:hover,
 .sidebar .actions .button:hover,
 .button.button-secondary:hover {
-  background: #FB1C5B;
+  background: #816A47;
   cursor: pointer;
 }
 .cart .buttons-set .button:active,
 .cart-table .button:active,
 .sidebar .actions .button:active,
 .button.button-secondary:active {
-  background: #FB1C5B;
+  background: #816A47;
   color: #636363;
 }
 .cart .buttons-set .button:focus,
@@ -904,7 +904,7 @@ body:not(.customer-account) .block:first-child .block-title {
 .sidebar .actions .button:focus,
 .button.button-secondary:focus {
   color: #636363;
-  background: #FB1C5B;
+  background: #816A47;
   outline: none;
 }
 
@@ -917,7 +917,7 @@ body:not(.customer-account) .block:first-child .block-title {
 .cart-table .product-cart-actions .button,
 #co-shipping-method-form .buttons-set .button,
 .footer .button {
-  background: #FB1C5B;
+  background: #816A47;
   display: inline-block;
   padding: 7px 15px;
   border: 0;
@@ -935,7 +935,7 @@ body:not(.customer-account) .block:first-child .block-title {
 .cart-table .product-cart-actions .button:hover,
 #co-shipping-method-form .buttons-set .button:hover,
 .footer .button:hover {
-  /*background: #C11747;*/
+  /*background: #715d40;*/
   cursor: pointer;
 }
 .button:active,
@@ -995,7 +995,7 @@ a.button:hover {
   text-decoration: underline;
   text-transform: uppercase;
   display: inline-block;
-  color: #FB1C5B;
+  color: #816A47;
   font-family: 'Raleway', 'Helvetica Neue', Verdana, Arial, sans-serif;
 }
 .button2 span:hover,
@@ -1153,7 +1153,7 @@ a.button:hover {
 }
 
 .breadcrumbs a:hover {
-  color: #FB1C5B;
+  color: #816A47;
 }
 
 .breadcrumbs strong {
@@ -1189,13 +1189,13 @@ a.button:hover {
 }
 .btn-remove:hover,
 .btn-previous:hover {
-  background-color: #FB1C5B;
-  border-color: #FB1C5B;
+  background-color: #816A47;
+  border-color: #816A47;
 }
 
 .btn-remove:after {
   content: 'X';
-  color: #FB1C5B;
+  color: #816A47;
   height: 20px;
   line-height: 20px;
   width: 100%;
@@ -1230,7 +1230,7 @@ a.button:hover {
   display: block;
   border-top: 4px solid transparent;
   border-bottom: 4px solid transparent;
-  border-right: 4px solid #FB1C5B;
+  border-right: 4px solid #816A47;
   border-left: none;
   position: absolute;
   top: 50%;
@@ -1530,7 +1530,7 @@ a.button:hover {
  * Promotional Message Banner
  */
 .promo-msg {
-  color: #FB1C5B;
+  color: #816A47;
   text-align: center;
   margin: 10px;
   text-transform: uppercase;
@@ -1760,7 +1760,7 @@ a.button:hover {
 }
 
 .price-box .price {
-  color: #FB1C5B;
+  color: #816A47;
   font-size: 16px;
 }
 
@@ -1777,7 +1777,7 @@ a.button:hover {
 
 .price-box .minimal-price-link {
   padding-left: 1em;
-  color: #FB1C5B;
+  color: #816A47;
   display: block;
   /* We want this to show on its own line, otherwise the layout looks funky */
 }
@@ -1807,7 +1807,7 @@ a.button:hover {
 }
 
 .price-box .special-price {
-  color: #FB1C5B;
+  color: #816A47;
   padding-left: 1em;
 }
 .price-box .special-price .price-label {
@@ -1907,7 +1907,7 @@ span.weee {
   z-index: 300;
   width: 200px;
   padding: 8px;
-  border: 1px solid #FB1C5B;
+  border: 1px solid #816A47;
   background-color: #F6F6F6;
   top: 21px;
   left: -100px;
@@ -1920,7 +1920,7 @@ span.weee {
   display: block;
   border-right: 7px solid transparent;
   border-left: 7px solid transparent;
-  border-bottom: 7px solid #FB1C5B;
+  border-bottom: 7px solid #816A47;
   border-top: none;
   left: 97px;
   top: -7px;
@@ -1998,7 +1998,7 @@ span.weee {
   }
 }
 .no-touch .product-image:hover {
-  border-color: #FB1C5B;
+  border-color: #816A47;
 }
 
 /* -------------------------------------------- *
@@ -2225,7 +2225,7 @@ span.weee {
   width: 25px;
   height: 30px;
   padding: 0;
-  color: #FB1C5B;
+  color: #816A47;
   font-family: 'Raleway', 'Helvetica Neue', Verdana, Arial, sans-serif;
 }
 
@@ -2248,7 +2248,7 @@ span.weee {
 }
 .pages .next:hover,
 .pages .previous:hover {
-  border: 1px solid #FB1C5B;
+  border: 1px solid #816A47;
 }
 
 .pages .next:before {
@@ -2259,7 +2259,7 @@ span.weee {
   display: block;
   border-top: 4px solid transparent;
   border-bottom: 4px solid transparent;
-  border-left: 4px solid #FB1C5B;
+  border-left: 4px solid #816A47;
   border-right: none;
   top: 50%;
   margin-top: -3px;
@@ -2286,7 +2286,7 @@ span.weee {
   display: block;
   border-top: 4px solid transparent;
   border-bottom: 4px solid transparent;
-  border-right: 4px solid #FB1C5B;
+  border-right: 4px solid #816A47;
   border-left: none;
   top: 50%;
   margin-top: -3px;
@@ -2386,7 +2386,7 @@ body.customer-account .data-table .summary-collapse:before {
   display: block;
   border-right: 7px solid transparent;
   border-left: 7px solid transparent;
-  border-top: 7px solid #FB1C5B;
+  border-top: 7px solid #816A47;
   border-bottom: none;
   position: static;
   display: inline-block;
@@ -2418,7 +2418,7 @@ body.customer-account .data-table .show-details .summary-collapse:before {
   display: block;
   border-right: 7px solid transparent;
   border-left: 7px solid transparent;
-  border-bottom: 7px solid #FB1C5B;
+  border-bottom: 7px solid #816A47;
   border-top: none;
   position: static;
   display: inline-block;
@@ -2635,7 +2635,7 @@ textarea {
   font-size: 15px;
 }
 .input-text:focus {
-  border: 1px solid #FB1C5B;
+  border: 1px solid #816A47;
 }
 
 .input-text.validation-failed {
@@ -3183,7 +3183,7 @@ body {
  * ============================================ */
 .header-language-background {
   padding: 10px;
-  background-color: #FB1C5B;
+  background-color: #816A47;
   text-transform: uppercase;
 }
 .header-language-background .header-language-container {
@@ -3549,7 +3549,7 @@ a.skip-link {
   }
   .nav-primary li.menu-active > a,
   .nav-primary li.sub-menu-active > a {
-    color: #FB1C5B;
+    color: #816A47;
   }
 }
 /* ============================================ *
@@ -3575,7 +3575,7 @@ a.skip-link {
   }
   .nav-primary a:hover,
   .nav-primary li:hover > a {
-    color: #FB1C5B;
+    color: #816A47;
   }
   .nav-primary .menu-active {
     z-index: 200;
@@ -3758,7 +3758,7 @@ a.skip-link {
   }
 
   #header-account a:hover {
-    color: #FB1C5B;
+    color: #816A47;
   }
 }
 /* -------------------------------------------- *
@@ -3777,7 +3777,7 @@ a.skip-link {
 }
 
 #header-account a:hover {
-  color: #FB1C5B;
+  color: #816A47;
 }
 
 /* ============================================ *
@@ -3849,7 +3849,7 @@ a.skip-link {
 }
 @media only screen and (min-width: 771px) {
   .skip-cart {
-    color: #FB1C5B;
+    color: #816A47;
     text-transform: uppercase;
   }
   .skip-cart:hover {
@@ -3876,7 +3876,7 @@ a.skip-link {
 
   .skip-cart .count,
   .skip-link.skip-active .count {
-    color: #FB1C5B;
+    color: #816A47;
   }
 }
 .skip-cart .count.empty {
@@ -3993,7 +3993,7 @@ a.skip-link {
 }
 .footer .block-title,
 .footer address {
-  color: #FB1C5B;
+  color: #816A47;
 }
 .footer .links {
   float: left;
@@ -4010,7 +4010,7 @@ a.skip-link {
   color: #636363;
 }
 .footer .links a:hover {
-  color: #FB1C5B;
+  color: #816A47;
 }
 .footer .block-subscribe {
   float: right;
@@ -4223,7 +4223,7 @@ h3.product-name a:hover,
 h4.product-name a:hover,
 h5.product-name a:hover,
 p.product-name a:hover {
-  color: #FB1C5B;
+  color: #816A47;
   text-decoration: none;
 }
 
@@ -4685,7 +4685,7 @@ p.product-name a:hover {
   display: block;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
-  border-top: 4px solid #FB1C5B;
+  border-top: 4px solid #816A47;
   border-bottom: none;
   left: 10px;
   top: 50%;
@@ -4732,7 +4732,7 @@ p.product-name a:hover {
   display: block;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
-  border-top: 4px solid #FB1C5B;
+  border-top: 4px solid #816A47;
   border-bottom: none;
   left: 10px;
   top: 50%;
@@ -4790,7 +4790,7 @@ p.product-name a:hover {
     border-bottom-width: 0;
   }
   .block-layered-nav .block-content > dl > dt:hover {
-    color: #FB1C5B;
+    color: #816A47;
   }
   .block-layered-nav .block-content > dl > dt:after {
     content: '';
@@ -4800,7 +4800,7 @@ p.product-name a:hover {
     display: block;
     border-top: 4px solid transparent;
     border-bottom: 4px solid transparent;
-    border-left: 4px solid #FB1C5B;
+    border-left: 4px solid #816A47;
     border-right: none;
   }
   .block-layered-nav .block-content > dl > dt.last {
@@ -4820,7 +4820,7 @@ p.product-name a:hover {
     display: block;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
-    border-top: 4px solid #FB1C5B;
+    border-top: 4px solid #816A47;
     border-bottom: none;
     left: 6px;
     top: 50%;
@@ -4950,7 +4950,7 @@ p.product-name a:hover {
 }
 .product-view .product-shop .product-name .h1,
 .product-view .product-img-box .product-name h1 {
-  color: #FB1C5B;
+  color: #816A47;
   margin-bottom: 10px;
   border: 0;
 }
@@ -5397,7 +5397,7 @@ p.product-name a:hover {
   }
   .product-collateral .toggle-tabs li.current span,
   .product-collateral .toggle-tabs li:hover span {
-    color: #FB1C5B;
+    color: #816A47;
   }
   .product-collateral .toggle-tabs li:first-child {
     border-left: none;
@@ -5462,7 +5462,7 @@ p.product-name a:hover {
     display: block;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
-    border-top: 4px solid #FB1C5B;
+    border-top: 4px solid #816A47;
     border-bottom: none;
     left: 10px;
     top: 50%;
@@ -5486,7 +5486,7 @@ p.product-name a:hover {
     border-bottom-width: 0;
   }
   .product-collateral > dl > dt:hover {
-    color: #FB1C5B;
+    color: #816A47;
   }
   .product-collateral > dl > dt:after {
     content: '';
@@ -5496,7 +5496,7 @@ p.product-name a:hover {
     display: block;
     border-top: 4px solid transparent;
     border-bottom: 4px solid transparent;
-    border-left: 4px solid #FB1C5B;
+    border-left: 4px solid #816A47;
     border-right: none;
   }
   .product-collateral > dl > dt.last {
@@ -5516,7 +5516,7 @@ p.product-name a:hover {
     display: block;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
-    border-top: 4px solid #FB1C5B;
+    border-top: 4px solid #816A47;
     border-bottom: none;
     left: 6px;
     top: 50%;
@@ -5590,7 +5590,7 @@ p.product-name a:hover {
 }
 
 .grouped-items-table .name-wrapper {
-  color: #FB1C5B;
+  color: #816A47;
   font-family: 'Raleway', 'Helvetica Neue', Verdana, Arial, sans-serif;
 }
 .grouped-items-table .qty-wrapper {
@@ -6390,7 +6390,7 @@ p.product-name a:hover {
   display: block;
   border-top: 6px solid transparent;
   border-bottom: 6px solid transparent;
-  border-right: 6px solid #FB1C5B;
+  border-right: 6px solid #816A47;
   border-left: none;
   position: absolute;
   top: 3px;
@@ -6404,7 +6404,7 @@ p.product-name a:hover {
   display: block;
   border-right: 6px solid transparent;
   border-left: 6px solid transparent;
-  border-top: 6px solid #FB1C5B;
+  border-top: 6px solid #816A47;
   border-bottom: none;
   right: -15px;
   top: 6px;
@@ -6428,7 +6428,7 @@ p.product-name a:hover {
 }
 .cart-table .product-cart-actions .qty {
   height: 30px;
-  border-color: #FB1C5B;
+  border-color: #816A47;
   border-radius: 0;
   margin-bottom: 10px;
   text-align: center;
@@ -6823,7 +6823,7 @@ p.product-name a:hover {
  * Checkout - Cart Cross sell
  * ============================================ */
 .crosssell h2 {
-  color: #FB1C5B;
+  color: #816A47;
 }
 .crosssell .item a.product-image {
   width: auto;
@@ -6955,7 +6955,7 @@ p.product-name a:hover {
   text-align: center;
   color: #FFFFFF;
   line-height: 26px;
-  background-color: #FB1C5B;
+  background-color: #816A47;
   display: block;
   position: absolute;
   top: 50%;
@@ -6973,7 +6973,7 @@ p.product-name a:hover {
 
 .opc .section.allow .step-title:hover h2,
 .opc .section.active .step-title h2 {
-  color: #FB1C5B;
+  color: #816A47;
 }
 
 .opc .section .step-title h2 {
@@ -7558,7 +7558,7 @@ body:not(.opc-has-progressed-from-login) .opc.opc-firststep-login .section#opc-l
   line-height: inherit;
 }
 #narrow-by-list dd .swatch-link:hover .swatch-label {
-  border-color: #FB1C5B;
+  border-color: #816A47;
 }
 #narrow-by-list dd .swatch-label {
   background: #f4f4f4;
@@ -7611,7 +7611,7 @@ body:not(.opc-has-progressed-from-login) .opc.opc-firststep-login .section#opc-l
 .configurable-swatch-list .hover .swatch-link,
 .configurable-swatch-list .selected .swatch-link,
 .swatch-link:hover {
-  border-color: #FB1C5B;
+  border-color: #816A47;
 }
 
 .configurable-swatch-box {
@@ -7653,7 +7653,7 @@ body:not(.opc-has-progressed-from-login) .opc.opc-firststep-login .section#opc-l
 .product-view .product-options .swatch-attr .select-label {
   display: inline;
   font-weight: normal;
-  color: #FB1C5B;
+  color: #816A47;
   padding-left: 5px;
 }
 .product-view .product-options dd .input-box {
@@ -8534,7 +8534,7 @@ div.paypal-logo span > img {
   display: none;
 }
 #customer-reviews h2 {
-  color: #FB1C5B;
+  color: #816A47;
   font-size: 12px;
   text-transform: uppercase;
 }
@@ -8548,7 +8548,7 @@ div.paypal-logo span > img {
   text-transform: uppercase;
 }
 #customer-reviews h3 span {
-  color: #FB1C5B;
+  color: #816A47;
 }
 #customer-reviews .fieldset {
   padding-top: 25px;
@@ -8631,7 +8631,7 @@ div.paypal-logo span > img {
   margin: 15px 0;
 }
 #customer-reviews dl dd .review-meta {
-  color: #FB1C5B;
+  color: #816A47;
   font-family: 'Raleway', 'Helvetica Neue', Verdana, Arial, sans-serif;
   font-size: 10px;
   font-weight: normal;
@@ -8868,10 +8868,10 @@ div.paypal-logo span > img {
   position: relative;
 }
 .slideshow-pager span:hover:before {
-  background-color: #C11747;
+  background-color: #715d40;
 }
 .slideshow-pager span.cycle-pager-active:before {
-  background-color: #FB1C5B;
+  background-color: #816A47;
 }
 .slideshow-pager > * {
   cursor: pointer;
@@ -8926,7 +8926,7 @@ div.paypal-logo span > img {
   left: 10px;
 }
 .slideshow-prev:hover:before {
-  border-color: transparent #C11747 transparent transparent;
+  border-color: transparent #715d40 transparent transparent;
 }
 
 .slideshow-next {
@@ -8939,7 +8939,7 @@ div.paypal-logo span > img {
   right: 10px;
 }
 .slideshow-next:hover:before {
-  border-color: transparent transparent transparent #C11747;
+  border-color: transparent transparent transparent #715d40;
 }
 
 .cycle-caption {
@@ -8993,7 +8993,7 @@ div.paypal-logo span > img {
   text-transform: uppercase;
 }
 #wishlist-table .product-name a {
-  color: #FB1C5B;
+  color: #816A47;
 }
 #wishlist-table .wishlist-sku {
   font-size: 11px;
@@ -9020,7 +9020,7 @@ div.paypal-logo span > img {
   text-transform: uppercase;
 }
 #wishlist-table textarea:focus {
-  border: 1px solid #FB1C5B;
+  border: 1px solid #816A47;
 }
 #wishlist-table .item-manage {
   text-align: right;
@@ -9087,12 +9087,12 @@ div.paypal-logo span > img {
 }
 #wishlist-table .giftregisty-add li {
   cursor: pointer;
-  color: #FB1C5B;
+  color: #816A47;
   margin-bottom: 3px;
 }
 #wishlist-table .truncated .details {
   background: none;
-  color: #FB1C5B;
+  color: #816A47;
 }
 #wishlist-table td[data-rwd-label]:before {
   font-weight: 600;
@@ -9349,7 +9349,7 @@ div.paypal-logo span > img {
   font-weight: bold;
 }
 .header-minicart .product-details .product-name a {
-  color: #FB1C5B;
+  color: #816A47;
 }
 .header-minicart .info-wrapper {
   margin-bottom: 0.5em;
@@ -9359,7 +9359,7 @@ div.paypal-logo span > img {
   padding-right: 10px;
 }
 .header-minicart .info-wrapper td {
-  color: #FB1C5B;
+  color: #816A47;
   clear: right;
 }
 .header-minicart .info-wrapper .qty-wrapper td {
@@ -9401,7 +9401,7 @@ div.paypal-logo span > img {
   text-transform: uppercase;
 }
 .header-minicart .subtotal .price {
-  color: #FB1C5B;
+  color: #816A47;
 }
 .header-minicart .minicart-actions {
   padding: 10px;
@@ -9535,7 +9535,7 @@ div.paypal-logo span > img {
   -o-border-radius: 2px;
   border-radius: 2px;
   background-color: #FFFFFF;
-  border: 1px solid #FB1C5B;
+  border: 1px solid #816A47;
   left: 0;
   padding-left: 0;
   position: absolute;
@@ -9544,17 +9544,17 @@ div.paypal-logo span > img {
 }
 .search-autocomplete ul li {
   border-bottom: 1px solid #f4f4f4;
-  color: #FB1C5B;
+  color: #816A47;
   cursor: pointer;
   font-size: 12px;
   padding: 4px 6px;
   text-align: left;
 }
 .search-autocomplete ul li:hover {
-  color: #C11747;
+  color: #715d40;
 }
 .search-autocomplete ul li.selected {
-  background-color: #FB1C5B;
+  background-color: #816A47;
   color: white;
 }
 .search-autocomplete ul li .amount {
@@ -9572,7 +9572,7 @@ div.paypal-logo span > img {
   display: block;
   border-right: 7px solid transparent;
   border-left: 7px solid transparent;
-  border-bottom: 7px solid #FB1C5B;
+  border-bottom: 7px solid #816A47;
   border-top: none;
   left: 50%;
   top: -7px;
@@ -9612,7 +9612,7 @@ div.paypal-logo span > img {
 }
 .product-review .product-details h2 {
   border-bottom: 1px solid #cccccc;
-  color: #FB1C5B;
+  color: #816A47;
   font-size: 16px;
   font-weight: 600;
   font-family: 'Raleway', 'Helvetica Neue', Verdana, Arial, sans-serif;
@@ -9688,11 +9688,11 @@ div.paypal-logo span > img {
 }
 .cms-page-view .std h1,
 .cms-no-route .std h1 {
-  color: #FB1C5B;
+  color: #816A47;
 }
 .cms-page-view .std h2,
 .cms-no-route .std h2 {
-  color: #FB1C5B;
+  color: #816A47;
 }
 .cms-page-view .std li,
 .cms-no-route .std li {
@@ -9769,7 +9769,7 @@ div.paypal-logo span > img {
   display: block;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
-  border-top: 4px solid #FB1C5B;
+  border-top: 4px solid #816A47;
   border-bottom: none;
   left: 10px;
   top: 50%;
