--- a/src/scss/inc/_vars.scss
+++ b/src/scss/inc/_vars.scss
@@ -3,7 +3,8 @@ $theme-path-pic: #{$theme-path}/Images;
 $pathImage: #{$theme-path}/Images;
 //$theme-path-fonts: #{$theme-path}/fonts;
 //$theme-path-fonts: fonts;
-
+$button-color: #816A47;//#FB1C5B;
+$button-color-hover: #715d40;//#C11747;
 $color1Green: #449d44;
 $color2Blue: #3c8dbc;
 $color3Brown: #3a3943; // menu bg
