--- a/src/scss/rentabag/_main.scss
+++ b/src/scss/rentabag/_main.scss
@@ -57,7 +57,7 @@ body.cms-home {
 			vertical-align: top;
 			background: $color-main;
 			font-size: 16px;
-			&:hover{  background: #C11747;  }
+			&:hover{  background: $color-main-hover;  }
 			@include mdmax($mdmax){
 				width: 90px;
 				font-size: 14px;
