--- a/src/scss/rentabag/_pages.scss
+++ b/src/scss/rentabag/_pages.scss
@@ -410,11 +410,13 @@ body {
 				}
 			}
 			.button{
+				width: 125px;
 				height: 50px;
 				margin-left: -10px;
 				border-radius: 0 5px 5px 0;
 				background: $color-main;
-				&:hover{  background: #C11747;  }
+				font-size: 16px;
+				&:hover{  background: $color-main-hover;  }
 			}
 		}
 	}
