--- a/src/scss/rentabag/_vars.scss
+++ b/src/scss/rentabag/_vars.scss
@@ -1,5 +1,6 @@
 $box-shadow: 0 5px 25px -6px rgba(0, 0, 0, 0.5);
-$color-main: #FB1C5B;
+$color-main: #816A47;//#FB1C5B;
+$color-main-hover: #715d40;//#C11747;
 $color-green: #5d5d5d;
 @mixin payment_sprite{
 	background: url(../images/payment_sprite_grey.png) no-repeat;
