--- a/src/scss/rentabag/_pages.scss
+++ b/src/scss/rentabag/_pages.scss
@@ -463,9 +463,9 @@ thead th, tbody th {
 	display: none;
 }
 
-.data-table tbody td, .data-table tfoot td {
-	font-family: "Helvetica Neue", Verdana, Arial, sans-serif;
-}
+//.data-table tbody td, .data-table tfoot td {
+//	font-family: "Helvetica Neue", Verdana, Arial, sans-serif;
+//}
 
 #contactForm {
 	textarea {
